--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,10 @@ xcode_sdk: iphonesimulator10.1
 env:
   global:
   - FRAMEWORK_NAME=WebBrowser
+  - EXAMPLE_SCHEME="WebBrowser"
+  - IOS_SDK=iphonesimulator10.1
+  matrix:
+  - DESTINATION="OS=10.1,name=iPhone 7 Plus" SDK="$IOS_SDK"
 before_install:
 - brew update
 - brew outdated carthage || brew upgrade carthage
@@ -22,3 +26,6 @@ deploy:
   on:
     repo: zhongwuzw/WebBrowser
     tags: true
+
+script:
+  - xcodebuild -scheme "$EXAMPLE_SCHEME" -sdk "$SDK" -destination "$DESTINATION" -configuration Debug ONLY_ACTIVE_ARCH=NO build | xcpretty
