--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,14 @@ language: objective-c
 osx_image: xcode8.2
 xcode_project: WebBrowser.xcodeproj
 xcode_scheme: WebBrowser
-xcode_sdk: iphonesimulator10.1
+xcode_sdk: iphonesimulator10.2
 env:
   global:
   - FRAMEWORK_NAME=WebBrowser
   - EXAMPLE_SCHEME="WebBrowser"
-  - IOS_SDK=iphonesimulator10.1
+  - IOS_SDK=iphonesimulator10.2
   matrix:
-  - DESTINATION="OS=10.1,name=iPhone 7 Plus" SDK="$IOS_SDK"
+  - DESTINATION="platform=iOS Simulator,OS=10.2,name=iPhone 7 Plus" SDK="$IOS_SDK"
 before_install:
 - brew update
 - brew outdated carthage || brew upgrade carthage
