--- a/WebBrowser/Info.plist
+++ b/WebBrowser/Info.plist
@@ -50,6 +50,12 @@
 	</array>
 	<key>UIStatusBarHidden</key>
 	<false/>
+	<key>NSCameraUsageDescription</key>
+	<string>允许拍摄和上传照片</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>允许录制和上传视频</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>允许保存和上传照片</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>使用定位获取附近信息，为您提供更精准的本地服务</string>
 	<key>UIStatusBarStyle</key>
