--- a/WebBrowser/Info.plist
+++ b/WebBrowser/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
-	<string>en</string>
+	<string>zh_CN</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -38,6 +38,14 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>允许拍摄和上传照片</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>使用定位获取附近信息，为您提供更精准的本地服务</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>允许录制和上传视频</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>允许保存和上传照片</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
@@ -50,14 +58,6 @@
 	</array>
 	<key>UIStatusBarHidden</key>
 	<false/>
-	<key>NSCameraUsageDescription</key>
-	<string>允许拍摄和上传照片</string>
-	<key>NSMicrophoneUsageDescription</key>
-	<string>允许录制和上传视频</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>允许保存和上传照片</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>使用定位获取附近信息，为您提供更精准的本地服务</string>
 	<key>UIStatusBarStyle</key>
 	<string>UIStatusBarStyleLightContent</string>
 	<key>UISupportedInterfaceOrientations</key>
