--- a/WebBrowser/Info.plist
+++ b/WebBrowser/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>zh_CN</string>
+	<key>CFBundleDisplayName</key>
+	<string>Rockets</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -40,10 +42,14 @@
 	</dict>
 	<key>NSCameraUsageDescription</key>
 	<string>允许拍摄和上传照片</string>
+	<key>NSContactsUsageDescription</key>
+	<string>允许访问通讯录</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>使用定位获取附近信息，为您提供更精准的本地服务</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>允许录制和上传视频</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>允许保存和上传照片</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>允许保存和上传照片</string>
 	<key>UIBackgroundModes</key>
@@ -58,10 +64,6 @@
 	</array>
 	<key>UIStatusBarHidden</key>
 	<false/>
-	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>允许保存和上传照片</string>
-	<key>NSContactsUsageDescription</key>
-	<string>允许访问通讯录</string>
 	<key>UIStatusBarStyle</key>
 	<string>UIStatusBarStyleLightContent</string>
 	<key>UISupportedInterfaceOrientations</key>
